# runtime

eng/native/: build-commons.sh  configurecompiler.cmake  gen-buildsys.cmd
src/coreclr/: CMakeLists.txt  clrdefinitions.cmake
src/coreclr/binder/: assembly.cpp
src/coreclr/binder/inc/: assembly.hpp
src/coreclr/debug/daccess/: daccess.cpp  dacdbiimpl.cpp  dacdbiimplstackwalk.cpp  dacimpl.h  enummem.cpp  fntableaccess.h  request.cpp  task.cpp
src/coreclr/debug/ee/: controller.cpp  controller.h  debugger.cpp  debugger.h  rcthread.cpp
src/coreclr/debug/inc/: dbgutil.h
src/coreclr/dlls/mscoree/: exports.cpp  mscorwks_ntdef.src  mscorwks_unixexports.src
src/coreclr/gc/: gc.cpp
src/coreclr/gcinfo/: gcinfoencoder.cpp
src/coreclr/hosts/coreshim/: CMakeLists.txt
src/coreclr/ilasm/: CMakeLists.txt
src/coreclr/ildasm/exe/: CMakeLists.txt
src/coreclr/inc/: clrconfigvalues.h  corjit.h  dacvars.h  eventtracebase.h  executableallocator.h  holder.h  icorjitinfoimpl_generated.h  jiteeversionguid.h  jithelpers.h  loaderheap.h  stacktrace.h  utilcode.h  vptr_list.h
src/coreclr/interpreter/: CMakeLists.txt  clrinterpreter.exports  clrinterpreter_unixexports.src  compiler.cpp  compiler.h  ee_il_dll.cpp  ee_il_dll.hpp  eeinterp.cpp  interpreter.h  intops.def
src/coreclr/jit/: CMakeLists.txt  ICorJitInfo_API_names.h  ICorJitInfo_API_wrapper.hpp  codegencommon.cpp  emit.cpp  emit.h  emitarm.cpp  emitxarch.cpp  emitxarch.h
src/coreclr/minipal/: minipal.h
src/coreclr/minipal/Unix/: CMakeLists.txt  doublemapping.cpp
src/coreclr/minipal/Windows/: doublemapping.cpp
src/coreclr/nativeaot/Runtime/: EHHelpers.cpp  StackFrameIterator.cpp  StackFrameIterator.h
src/coreclr/pal/inc/: pal.h
src/coreclr/pal/src/: CMakeLists.txt
src/coreclr/src/inc/: sospriv.idl
src/coreclr/src/vm/: appdomain.cpp  methodtable.cpp
src/coreclr/src/zap/: zapper.cpp
src/coreclr/tools/crossgen/: CMakeLists.txt
src/coreclr/utilcode/: CMakeLists.txt  debug.cpp  executableallocator.cpp  loaderheap.cpp  stacktrace.cpp  util.cpp
src/coreclr/vm/: CMakeLists.txt  appdomain.cpp  assemblyspec.hpp  callcounting.cpp  callcounting.h  callstubgenerator.cpp  callstubgenerator.h  ceeload.cpp  ceemain.cpp  class.cpp  clrex.h  codeman.cpp  codeman.h  comcallablewrapper.cpp  comdelegate.cpp  common.h  comutilnative.cpp  corelib.h  corhost.cpp  dllimport.cpp  dllimportcallback.cpp  dllimportcallback.h  domainfile.cpp  domainfile.h  dynamicmethod.cpp  dynamicmethod.h  eeconfig.h  eedbginterfaceimpl.inl  eetwain.cpp  encee.cpp  eventpipe.cpp  eventtrace.cpp  excep.cpp  excep.h  exceptionhandling.cpp  exceptionhandling.h  exceptionhandlingqcalls.h  exceptmacros.h  exinfo.cpp  exinfo.h  (+46 more)
src/coreclr/vm/amd64/: AsmHelpers.asm  AsmMacros.inc  CallDescrWorkerAMD64.asm  Context.S  Context.asm  JitHelpers_Fast.asm  RedirectedHandledJITCase.asm  ThePreStubAMD64.asm  asmconstants.h  asmhelpers.S  calldescrworkeramd64.S  cgenamd64.cpp  cgencpu.h  jithelpers_fast.S  theprestubamd64.S  thunktemplates.S  thunktemplates.asm  unixasmhelpers.S  virtualcallstubcpu.hpp
src/coreclr/vm/arm/: armsinglestepper.cpp  asmconstants.h  asmhelpers.S  asmhelpers.asm  cgencpu.h  stubs.cpp  thunktemplates.S  thunktemplates.asm  virtualcallstubcpu.hpp
src/coreclr/zap/: zapinfo.cpp
src/tests/Common/: CLRTest.Execute.Bash.targets  CLRTest.Execute.Batch.targets
(+93 files in other folders)
